QA_Ipreo/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Action_Id__c</fullName>
        <description>For migration.</description>
        <externalId>true</externalId>
        <label>Action Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Month__c</fullName>
        <formula>MONTH(ActivityDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Coverage_Groups__c</fullName>
        <label>Alert Coverage Groups</label>
        <picklist>
            <picklistValues>
                <fullName>Account Team</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - Acct Mgmt - Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - AM Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - BD Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - Corporate Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - DebtID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - Distribution - BNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - Distribution - Capita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - Distribution - CITI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - Distribution - JPMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - Distribution - NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - EQS Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - Factset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - GMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - IR360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - NASDAQ/TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - Perception Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - Proxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - Sales Team - Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - SID, SAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CorpIR - Targeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMG - Buyside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMG - Equities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMG - Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMG - Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMG - Muni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMG - Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMG - RS&amp;T / Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMG - Sales Team - Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMG - Senior Acct Managers - Global</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Alert_Due_Date__c</fullName>
        <formula>DATE( YEAR( ActivityDate ), MONTH( ActivityDate ) , DAY( ActivityDate ) )</formula>
        <label>Alert Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alert_Individual_Users__c</fullName>
        <description>This field is used to store the individuals&apos; email addresses.</description>
        <label>Alert Individual Users</label>
        <picklist>
            <picklistValues>
                <fullName>Aaron Dougherty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aaron Sahm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abdul Aziz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam Johnson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam Knight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam P. Venanzi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam Papa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agnies Watson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akeloe Facey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alawuddien Allie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alessandro Belluschi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexander Carrillo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexander Moody</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexandra Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex Baccari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex Duncan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex Kaye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex Wasilewski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex Wong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allegra Friedman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allen Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allison Walter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alois Nyamarebvu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alper Sungur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amanda Klein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amanda Pursley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amanda Scholl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambadas Morkhandikar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber Seidel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amy Rosario</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Alert_Sent_Date__c</fullName>
        <label>Alert Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Applicable_Competitive_Intel__c</fullName>
        <label>Applicable Competitive Intel</label>
        <picklist>
            <controllingField>Vertical__c</controllingField>
            <picklistValues>
                <fullName>Analec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ansarada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asbet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloomberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueMatrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boudica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapIQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cmi2i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computershare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal RoadShow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DebtX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DF King</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firmex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iLevel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intralinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IR Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J-IRIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markit®</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merrill Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modular Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MuniHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MZ Ilios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Napa</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Attendees_External_and_Internal__c</fullName>
        <description>A free form text field to enter meeting attendees, both external and internal.</description>
        <label>Attendees (External and Internal)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_From_Plugin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from External Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Response_Gauge__c</fullName>
        <label>Customer Response Gauge</label>
        <picklist>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Value__c</fullName>
        <label>Deal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <label>Executive Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KPI_Related__c</fullName>
        <formula>CASE(Activity_Type__c, 
&quot;Call (Cold Call)&quot;, &quot;Sales KPI&quot;, 
&quot;Call (Client - Proactive)&quot;, &quot;AM KPI GMG, AM KPI CORP&quot;, 
&quot;Call (Prospect)&quot;, &quot;AM KPI CORP&quot;, 
&quot;Client Testimonial&quot;, &quot;AM KPI CORP&quot;, 
&quot;Client Touchpoint (Churn Reduction)&quot;, &quot;AM KPI GMG, AM KPI CORP&quot;, 
&quot;Email (Client - Proactive)&quot;, &quot;AM KPI CORP&quot;, 
&quot;Email (Client - Group/Blast)&quot;, &quot;AM KPI CORP&quot;, 
&quot;Email (Prospect)&quot;, &quot;AM KPI CORP&quot;, 
&quot;Meeting (Sales Demo Prospect)&quot;, &quot;Sales KPI, AM KPI CORP&quot;, 
&quot;Meeting (Sales Demo Client)&quot;, &quot;Sales KPI, AM KPI GMG, AM KPI CORP&quot;, 
&quot;Meeting (Sales)&quot;, &quot;Sales KPI, AM KPI CORP&quot;, 
&quot;Meeting (Client Onsite Visit)&quot;, &quot;AM KPI GMG, AM KPI CORP&quot;, 
&quot;Meeting (Client Conference)&quot;, &quot;AM KPI CORP&quot;, 
&quot;Meeting (Onsite Visit Declined)&quot;, &quot;AM KPI CORP&quot;, 
&quot;Opportunity Identified&quot;, &quot;AM KPI GMG, AM KPI CORP&quot;, 
&quot;Survey Follow-up&quot;, &quot;AM KPI CORP&quot;, 
&quot;Training (Virtual)&quot;, &quot;AM KPI CORP&quot;,
&quot;Workflow Interaction (Proactive)&quot;, &quot;AM KPI CORP&quot;, 
&quot;Call (Not Connected)&quot;,  &quot;Sales KPI&quot;,
&quot;Call (Voicemail)&quot;,  &quot;Sales KPI&quot;,
&quot;Not KPI Related&quot;)</formula>
        <label>KPI Related</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <picklist>
            <controllingField>Vertical__c</controllingField>
            <picklistValues>
                <fullName>Activist Intelligence (Shark Repellent)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (2111)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (2242)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (5130)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Alerts Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Axe Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Corporate Issuers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Derivatives)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Equity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Fixed Income)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (QIB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Reg S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Retail)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (SMMP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Syndicated Loans)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Axe Management (Add-on Feature)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate (Assist)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate (Basic)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate (CRM Add-on)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate (Equity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate (Fixed Income)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate (Retail)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Dialer (Add-on Feature)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Enterprise (Add-on Feature)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD IR Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Mail (Add-on Feature)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Research Distribution (Add-on)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Trade Management (Add-on Feature)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Related_To_Link__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_30 , 28) + WhatId</formula>
        <label>Related To Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Alert__c</fullName>
        <label>Send Alert</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account Management – Data Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Hours Client Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Mobile Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Education Touch Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive Touch Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RADAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Relationship__c</fullName>
        <label>User Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>All Products</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WhatId__c</fullName>
        <formula>Left(WhatId,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>What Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhoId__c</fullName>
        <formula>Left(WhoId,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Who Id</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>